--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Colocar em pratica o que estou aprendendo com os cursos que estou fazendo junto aos conhecimentos do meu emprego estagiando pela primeira vez na área",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
@@ -12,5 +14,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
